--- a/xling-3.1-bom.html
+++ b/xling-3.1-bom.html
@@ -8,10 +8,10 @@
     </head>
     <body>
     <h1>/home/dsl/git/Xling/xling.sch</h1>
-    <p>Wed 18 Sep 2019 12:42:08 CEST</p>
-    <p>Eeschema 5.0.2+dfsg1-1</p>
-    <p><b>Revision: </b>0.3</p>
-    <p><b>Component Count: </b>61</p>
+    <p>Sun 03 Nov 2019 15:43:57 CET</p>
+    <p>Eeschema 5.1.4+dfsg1-1</p>
+    <p><b>Revision: </b>3.1</p>
+    <p><b>Component Count: </b>69</p>
     <table>
     <tr><th style='width:640px'>Ref</th><th>Qnty</th><th>Value</th><th>Part</th><th>Footprint</th><th>Description</th><th>Vendor</th><th>Model</th></tr>
     <tr><td>C1, C3, C4, C7, C10, C12</td><td>6</td><td>100nF</td><td>xling:C</td><td>Xling Footprints:C_0603_1608Metric</td><td></td><td></td><td>CL10B104KO8NNNC</td></tr>
@@ -27,12 +27,11 @@
     <tr><td>L2</td><td>1</td><td>2.2uH</td><td>xling:L</td><td>Xling Footprints:L_1210_3225Metric</td><td></td><td></td><td>NLV32T-2R2J-PF</td></tr>
     <tr><td>OH1</td><td>1</td><td>OpenHardwareLogo</td><td>xling:OpenHardwareLogo</td><td>Xling Footprints:oshw</td><td></td><td></td><td></td></tr>
     <tr><td>Q1</td><td>1</td><td>NTR0202PL</td><td>xling:NTR2101P</td><td>Xling Footprints:SOT-23</td><td></td><td></td><td>NTR0202PLT1G</td></tr>
-    <tr><td>R1, R2</td><td>2</td><td>1K</td><td>xling:R</td><td>Xling Footprints:R_0603_1608Metric</td><td></td><td></td><td>CRCW06031K00JNTABC</td></tr>
+    <tr><td>R1, R2, R19, R20, R21, R22, R23</td><td>7</td><td>10K</td><td>xling:R</td><td>Xling Footprints:R_0603_1608Metric</td><td></td><td></td><td>0603SAJ0103T5E</td></tr>
     <tr><td>R3, R8, R9, R10, R11, R13</td><td>6</td><td>100K</td><td>xling:R</td><td>Xling Footprints:R_0603_1608Metric</td><td></td><td></td><td>0603SAJ0104T5E</td></tr>
     <tr><td>R4, R5, R6, R7, R12, R14, R15</td><td>7</td><td>510K</td><td>xling:R</td><td>Xling Footprints:R_0603_1608Metric</td><td></td><td></td><td>0603SAJ0514T5E</td></tr>
     <tr><td>R16</td><td>1</td><td>2.55K</td><td>xling:R</td><td>Xling Footprints:R_0603_1608Metric</td><td></td><td></td><td>0603SAF2551T5E</td></tr>
     <tr><td>R17, R18</td><td>2</td><td>110K</td><td>xling:R</td><td>Xling Footprints:R_0603_1608Metric</td><td></td><td></td><td>0603SAF1103T5E</td></tr>
-    <tr><td>R19, R20</td><td>2</td><td>10K</td><td>xling:R</td><td>Xling Footprints:R_0603_1608Metric</td><td></td><td></td><td>0603SAJ0103T5E</td></tr>
     <tr><td>SW1, SW2, SW3</td><td>3</td><td>BTN</td><td>xling:SW_Push</td><td>Xling Footprints:SW_Tact_4.5x4.5mm_TVCM09BB_Low_Profile</td><td></td><td></td><td>TVCM09BB</td></tr>
     <tr><td>U1</td><td>1</td><td>REX012864L</td><td>xling:REX012864L</td><td>Xling Footprints:DisplayPin_1x30_P0.7mm</td><td></td><td></td><td>REX012864LYAP3N00000</td></tr>
     <tr><td>U2</td><td>1</td><td>ATmega1284P-AU</td><td>xling:ATmega1284P-AU</td><td>Xling Footprints:TQFP-44_10x10mm_P0.8mm</td><td>20MHz, 128kB Flash, 16kB SRAM, 4kB EEPROM, JTAG, TQFP-44</td><td></td><td>ATMEGA1284P-AU</td></tr>
